; ModuleID = '/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_remove_binaries.c'
source_filename = "/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_remove_binaries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"/EFI/systemd\00", align 1
@REMOVE_ROOT = common dso_local global i32 0, align 4
@REMOVE_PHYSICAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @remove_binaries to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_binaries(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i8* @prefix_roota(i8* %6, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @REMOVE_ROOT, align 4
  %10 = load i32, i32* @REMOVE_PHYSICAL, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @rm_rf(i8* %8, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @remove_boot_efi(i8* %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %1
  %18 = load i32, i32* %4, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load i32, i32* %5, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %20, %17, %1
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i8* @prefix_roota(i8*, i8*) #1

declare dso_local i32 @rm_rf(i8*, i32) #1

declare dso_local i32 @remove_boot_efi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
